Current news
============

Moved back from BitKeeper to CVS on SF.net.

ntfsprogs should now work completely on Windows 2000 and XP (Cygwin). 
mkntfs does not create bootable volumes when on Windows.  Volumes are locked 
when using a R/W utility in order to prevent data corruption.  (Yuval Fledel)

ntfsinfo has been extended and now provides much more detailed information as
well as being able to resolve a path/filename instead of requiring the inode
number.  (Yuval Fledel, Anton Altaparmakov)

mkntfs now creates bootable ntfs volumes so you can install Windows on an
ntfs volume created with mkntfs and Windows will manage to boot afterwards.

ntfsresize now supports relocation which generally means you are now able to
resize to any size you like (as long as there is enough free space).  Note,
this modifies the command line options a little as well as the returned output
so applications using ntfsresize might need modifications before they will
work with the updated ntfsresize.  (Szakacsits Szabolcs)

ntfsprogs now should ./configure and compile cleanly on SuSE as well as RedHat
Linux.

ntfsprogs ("make libs" only) now compiles on FreeBSD, NetBSD, Windows (Cygwin),
and DOS (DJGPP).  Thanks to Christophe Grenier for DOS and FreeBSD testing
and fixes and to Lode Leroy for Windows testing and fixes.  Note, the Windows
version is read-only and has limited functionality at present.


Older news
==========

Merged the NTFS Gnome VFS module by Jan Kratochvil.

Added new utilities: ntfsclone by Szakacsits Szabolcs, ntfscluster by Richard
Russon, ntfsinfo by Matthew Fanto, ntfsls originally by Lode Leroy, modified
by Anton Altaparmakov, and ntfscat by Richard Russon.

Library internal enhancements and API additions.  Of particular note is the
device io abstraction layer and the addition of the win32 device operations.
(Note the win32 device operations are read only and incomplete but should
allow running of simple read-only ntfs utilities under Cygwin.)  Thanks to